installed everything and added .gitignore

--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,14 +1,23 @@
 {
   "name": "static-site",
   "version": "1.0.0",
-  "description": "",
+  "description": "readme generator",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "William Santee",
   "license": "ISC",
   "dependencies": {
-    "inquirer": "^6.3.1"
-  }
+    "inquirer": "^6.5.2"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/willsan0723/readme-generator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/willsan0723/readme-generator/issues"
+  },
+  "homepage": "https://github.com/willsan0723/readme-generator#readme"
 }
